@@ -16,7 +16,7 @@
  *    along with this program; if not, write to the Free Software
  *    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- *    $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/jconfig.h,v 1.2 2005-06-30 21:35:48 merunka Exp $
+ *    $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/jconfig.h,v 1.3 2005-07-01 10:25:36 merunka Exp $
  *
  */
 
@@ -30,6 +30,7 @@ typedef struct __jconfig_settings {
 	const jbase_device *device;
 	gboolean	onoffContentFiltering;
 	gboolean	onoffPromisc;
+	gboolean	onoffResolver;
 	guint		localAggregation;
 	guint		remoteAggregation;
 
