@@ -16,7 +16,7 @@
  *    along with this program; if not, write to the Free Software
  *    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- *    $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/jresolver.h,v 1.3 2005-07-01 10:02:08 merunka Exp $
+ *    $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/jresolver.h,v 1.4 2005-07-01 10:25:37 merunka Exp $
  *
  */
 
@@ -38,8 +38,11 @@ typedef struct __jresolver_resolvertype {
 } jresolver_resolvertype;
 
 gboolean		jresolver_Setup();
+void			jresolver_SetEnabled(gboolean isEnabled);
 jbase_resolv_entry 	*jresolver_Lookup(int af, const jbase_mutableaddress *address);
 void			jresolver_AddExternalLookupScript(int af, const jbase_mutableaddress *mask, const jbase_mutableaddress *value, char *lookupScriptName);
 void			jresolver_AddNormalLookup(int af, const jbase_mutableaddress *mask, const jbase_mutableaddress *value);
+
+extern	gboolean	jresolver_IsEnabled;
 
 #endif
