@@ -1,6 +1,7 @@
-2005-06-31:	Added pause
+2005-07-01:	Added pause
 		Added sorting
 		Added external resolvers
+		Added -n command line parameter (disable resolving)
 
 2005-06-30:	Refactoring to more reusable design
 
@@ -40,4 +41,4 @@
 
 2002-08-22:	The package is entirely new.
 
-$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/NEWS,v 1.14 2005-07-01 10:02:08 merunka Exp $
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/NEWS,v 1.15 2005-07-01 10:25:36 merunka Exp $
